// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute collections valuation api should return success 1`] = `
{
  "data": {
    "result": 69000000,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 69000000,
  "statusCode": 200,
}
`;

exports[`execute punk valuation api should return success 1`] = `
{
  "data": {
    "result": 14000000,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 14000000,
  "statusCode": 200,
}
`;
